main_sources = files ('Ai.cpp',             'Application.cpp',    'Audio.cpp',
                      'Base.cpp',           'Button.cpp',         'ExitWindow.cpp',
	              'Game.cpp',           'GameExitWindow.cpp', 'GameOptionWindow.cpp',
	              'GameOverWindow.cpp', 'Image.cpp',          'Label.cpp',
	              'Main.cpp',           'MainMenu.cpp',       'Menu.cpp',
	              'OptionMenu.cpp',     'Player.cpp',         'QuitGameWindow.cpp',
	              'ScoreWindow.cpp',    'Tile.cpp',           'VictoryWindow.cpp',
	              'Video.cpp',          'Widget.cpp',         'Window.cpp',
	              'World.cpp')
project_sources += main_sources